@@ -1,5 +1,9 @@
 # vim: set noexpandtab:
 
+2012-08-26 Steve
+	* Added pileup tools for A-B3, A-B, and A-D7
+	* Filling the corresponding variables in the SusyNt
+
 2012-08-20 Steve
 	* Adding SusyMetValidation, a class for analyzing the MET in the d3pds
 
